Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -713,7 +713,7 @@
     "    sample_mean = get_mean(sample)\n",
     "    \n",
     "    # Now, subtract the sample mean from each point and square the result. \n",
-    "    sum([(i-sample_mean)**2 for i in sample_mean])\n",
+    "    varsum([(i-sample_mean)**2 for i in sample_mean])\n",
     "    \n",
     "    # Divide the total by the number of items in the sample to calculate variance \n",
     "    variance = None\n",
