--- a/index.ipynb
+++ b/index.ipynb
@@ -716,7 +716,7 @@
     "    var_sum = sum([(i-sample_mean)**2 for i in sample_mean])\n",
     "    \n",
     "    # Divide the total by the number of items in the sample to calculate variance \n",
-    "    variance = var_sum/\n",
+    "    variance = var_sum/len(sample)\n",
     "    \n",
     "    return variance\n",
     "\n",
