Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -728,7 +728,7 @@
     "    # Divide the total by the number of items in the sample to calculate variance \n",
     "    variance = var_sum/len(sample)\n",
     "    \n",
-    "    return variance\n",
+    "    return round(variance, 2)\n",
     "\n",
     "test1 = [1, 2, 3, 5, 5, 4]\n",
     "test2 = [1, 1, 1, 2, 3, 4, 5, 5, 5]\n",
