Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -805,7 +805,7 @@
     "\n",
     "    mean = None\n",
     "    \n",
-    "    stddev = get_var\n",
+    "    stddev = get_variance()\n",
     "    \n",
     "    return stddev\n",
     "\n",
