Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -801,11 +801,11 @@
    "source": [
     "from math import sqrt\n",
     "\n",
-    "def get_stddev(list):\n",
+    "def get_stddev(data):\n",
     "\n",
     "    mean = None\n",
     "    \n",
-    "    stddev = get_variance()\n",
+    "    stddev = get_variance(data)\n",
     "    \n",
     "    return stddev\n",
     "\n",
