Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -795,9 +795,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "76.71088579856186\n"
+     ]
+    }
+   ],
    "source": [
     "from math import sqrt\n",
     "\n",
@@ -805,7 +813,7 @@
     "\n",
     "    mean = None\n",
     "    \n",
-    "    stddev = get_variance(data)\n",
+    "    stddev = sqrt(get_variance(data))\n",
     "    \n",
     "    return stddev\n",
     "\n",
