Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -811,7 +811,7 @@
     "\n",
     "def get_stddev(data):\n",
     "\n",
-    "    mean = None\n",
+    "    mean = None #not needed\n",
     "    \n",
     "    stddev = sqrt(get_variance(data))\n",
     "    \n",
