--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -795,14 +795,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "76.71\n"
+      "76.71088579856186\n"
      ]
     }
    ],
@@ -815,7 +815,7 @@
     "    \n",
     "    stddev = sqrt(get_variance(data))\n",
     "    \n",
-    "    return round(stddev, 2)\n",
+    "    return stddev\n",
     "\n",
     "test = [120,112,131,211,312,90]\n",
     "\n",
