Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -867,7 +867,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# boxplot here"
+    "# boxplot here\n",
+    "plt."
    ]
   },
   {
