--- a/index.ipynb
+++ b/index.ipynb
@@ -898,7 +898,7 @@
    ],
    "source": [
     "# boxplot here\n",
-    "plt.boxplot(height, )"
+    "plt.boxplot(height, flierprops=)"
    ]
   },
   {
