--- a/index.ipynb
+++ b/index.ipynb
@@ -896,7 +896,7 @@
    ],
    "source": [
     "# boxplot here\n",
-    "plt.boxplot(height, flierprops=True)"
+    "plt.boxplot(height, )"
    ]
   },
   {
