Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -902,11 +902,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Median values is "
+   ]
   },
   {
    "cell_type": "markdown",
