Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -905,7 +905,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Median values is "
+    "Median values is around 67.  "
    ]
   },
   {
