Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -905,7 +905,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Median value is around 67.  50% of the data lies between 64 and 71."
+    "Excluding outliers, the Median value is around 67.  50% of the data lies between 64 and 71."
    ]
   },
   {
