--- a/index.ipynb
+++ b/index.ipynb
@@ -903,11 +903,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt."
+    "plt.boxplot?"
    ]
   },
   {
